--- a/templates/in_call.html
+++ b/templates/in_call.html
@@ -30,11 +30,11 @@
 
                             {% for l in languages %}
                                 {% if l != language %}
-                                    <option>
+                                    <option value="{{language.lower()}}">
                                         {{ l.name.capitalize() }}
                                     </option>
                                 {% else %}
-                                    <option value="{{language}}" selected>{{language}}</option>
+                                    <option value="{{language.lower()}}" selected>{{language}}</option>
                                 {% endif %}
                             {% endfor %}
 
